--- a/index.html
+++ b/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Memespam Garry's motd</title>
+    <style>
+        /* We have to use shitty 2005 CSS because gmod's embedded chromium is old as shit */
+        html, body {font-family: sans-serif; margin: 0; padding: 0; color: white;}
+        .inset {margin: 10px 20px;}
+        h3 {display: block; padding: 2em; margin: 20px 0 0; background: #503030; color: #fff}
+        body {
+            display: inline-block;
+            max-width: 1000px;
+            width: 100%;
+            text-align: left;
+            background: #323232;
+            min-height: 100%;
+            box-shadow: 0 0 15px 3px rgba(255, 255, 255, 0.04);
+            background-image: url(https://i.imgur.com/UPJvtxg.png);
+            background-repeat: no-repeat;
+            background-position: bottom right;
+            background-size: 270px;
+        }
+        html {
+            text-align: center;
+            width: 100%;
+            background: #232323;
+            height: 100%;
+        }
+        li {line-height: 1.5;}
+    </style>
 </head>
 <body>
-    Yooooo
+    <div class='inset'>
+        <h1>Welcome to Meme Spam Trash Can's TTT2 server!</h1>
+        <sup>This is a work in progress, bear with us!</sup>
+    </div>
+    <h3>Rules</h3>
+    <div>&nbsp;</div>
+    <ol class='inset'>
+        <li>Usual TTT rules - don't RDM, don't ghost, don't ruin the fun</li>
+        <li>No racism/homophobia/transphobia, etc. Don't be a dick.</li>
+        <li>Don't mic spam</li>
+        <li>No NSFW sprays</li>
+    </ol>
 </body>
 </html>
