--- a/index.html
+++ b/index.html
@@ -1,14 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Memespam Garry's motd</title>
+    <title>sergun's heaven Murder Gmod MOTD</title>
     <style>
         /* We have to use shitty 2005 CSS because gmod's embedded chromium is old as shit */
-        html, body {font-family: sans-serif; margin: 0; padding: 0; color: white;}
-        .inset {margin: 10px 20px;}
-        h3 {display: block; padding: 2em; margin: 20px 0 0; background: #503030; color: #fff}
+        html,
+        body {
+            font-family: sans-serif;
+            margin: 0;
+            padding: 0;
+            color: white;
+        }
+
+        .inset {
+            margin: 10px 20px;
+        }
+
+        h3 {
+            display: block;
+            padding: 1em;
+            margin: 20px 0 0;
+            background: #503030;
+            color: #fff
+        }
+
+        .bilgi {
+            display: block;
+            padding: 2em;
+            margin: 20px 0 0;
+            background: #005b85;
+            color: #fff
+        }
+
+        .bilgi2 {
+            display: block;
+            padding: 1em;
+            margin: 5px 0 0;
+            background: #005b85;
+            color: #fff
+        }
+
         body {
             display: inline-block;
             max-width: 1000px;
@@ -17,32 +51,63 @@
             background: #323232;
             min-height: 100%;
             box-shadow: 0 0 15px 3px rgba(255, 255, 255, 0.04);
-            background-image: url(https://i.imgur.com/UPJvtxg.png);
+            /* background-image: url(https://i.imgur.com/UPJvtxg.png); */
             background-repeat: no-repeat;
             background-position: bottom right;
             background-size: 270px;
         }
+
         html {
             text-align: center;
             width: 100%;
             background: #232323;
             height: 100%;
         }
-        li {line-height: 1.5;}
+
+        li {
+            line-height: 1.5;
+        }
     </style>
 </head>
+
 <body>
-    <div class='inset'>
-        <h1>Welcome to Meme Spam Trash Can's TTT2 server!</h1>
-        <sup>This is a work in progress, bear with us!</sup>
-    </div>
-    <h3>Rules</h3>
-    <div>&nbsp;</div>
-    <ol class='inset'>
-        <li>Usual TTT rules - don't RDM, don't ghost, don't ruin the fun</li>
-        <li>No racism/homophobia/transphobia, etc. Don't be a dick.</li>
-        <li>Don't mic spam</li>
-        <li>No NSFW sprays</li>
-    </ol>
+    
+        <div class='inset'>
+            <h1>sergun'un murder cennetine hoş geldin!</h1>
+            <sup>Kâr amacı gütmeyen, eğlence üzerine kurulu Klasik Murder Sunucusu</sup>
+        </div>
+        <hr>
+        <h3 class="bilgi2" style="background-color: green"><a href="https://steamcommunity.com/groups/sergunsheaven" style="color: white">Steam grubumuz ve şikayet/öneri kısmı için tıkla</a></h3>
+        <h3 class="bilgi2" style="background-color: purple"><a href="https://www.youtube.com/watch?v=LHG_uIeYTmA" style="color: white">Pembe mor hatası çözümü için tıkla</a></h3>
+        <hr>
+        <h3>Sunucu hakkında</h3>
+        <div>&nbsp;</div>
+        <ol class='inset'>
+            <ul>
+                <li>Murder oyun modunda olan kaliteli Türk sunucu eksikliğini gidermek amacıyla, tamamen eğlence üstüne
+                    ve kâr amacı gütmemek kaydıyla kurulmuştur.
+                </li>
+                <li>Herhangi bir özellik, yetki, VIP satışı, köprü satışı, ekstra HP satışı, kavanoz bal çekilişi, vb.
+                    kesinlikle kabul edilmez.</p>
+                </li>
+                <h3 class="bilgi">Sunucuda arkadaş canlısı bir ortam benimsenmektedir, katı kurallar yoktur ancak
+                    oyunbozanlığa, hileye, kışkırtıcı davranışlara ve sorunlu insanlara tolerans gösterilmez. Burası bir
+                    bakımevi ya da kreş değil.
+                </h3>
+            </ul>
+        </ol>
+
+        <h3>Kurallar <small>(aşırı basit)</small></h3>
+        <div>&nbsp;</div>
+        <ol class='inset'>
+            <li>Özellikle bir kişiyi/grubu incitmemek ya da aşağılamamak, abartmamak ve arkadaş canlısı kalmak kaydıyla, <u><strong>küfür serbesttir.</strong></u></li>
+            <li>Diğer oyunculara karşı üstünlük kazanmanızı sağlayabilecek her şey <u><strong>(script, hile, glitch, vb) yasaktır</strong></u>.</li>
+            <li><u><strong>Nedensiz yere masum insanları öldürmek yasaktır. </strong></u>İlk seferlerde uyarı, devamı halinde kalıcı ban alırsınız.</li>
+            <li>Murder oyun modu doğası gereği, <u><strong>takımlı oynamak yasaktır.</strong></u> Herkes tek başınadır.</li>
+            <li>Herhangi bir zararlı/pornografik/illegal içerik paylaşımı yasaktır.</li>
+            <li>Herhangi bir spam/reklam yasaktır. <u><strong>Gürültülü ve sorunlu mikrofon yasaklanmanıza sebep olabilir</strong></u>, mikrofonunuz düzgün çalışmıyorsa yazılı sohbeti kullanın.</li>
+            <li>Aptal olmayın.</li>
+            <li>Yaşayan sadece 2 kişi kaldığında bir yere saklanıp beklemek yasaktır.</li>
+        </ol>
 </body>
 </html>
