--- a/index.html
+++ b/index.html
@@ -77,8 +77,8 @@
             <sup>Kâr amacı gütmeyen, eğlence üzerine kurulu Klasik Murder Sunucusu</sup>
         </div>
         <hr>
-        <h3 class="bilgi2" style="background-color: green"><a href="https://steamcommunity.com/groups/sergunsheaven" style="color: white">Steam grubumuz ve şikayet/öneri kısmı için tıkla</a></h3>
-        <h3 class="bilgi2" style="background-color: purple"><a href="https://www.youtube.com/watch?v=LHG_uIeYTmA" style="color: white">Pembe mor hatası çözümü için tıkla</a></h3>
+        <h3 class="bilgi2" style="background-color: green"><a target="_blank" href="https://steamcommunity.com/groups/sergunsheaven" style="color: white">Steam grubumuz ve şikayet/öneri kısmı için tıkla</a></h3>
+        <h3 class="bilgi2" style="background-color: purple"><a target="_blank" href="https://www.youtube.com/watch?v=LHG_uIeYTmA" style="color: white">Pembe mor hatası çözümü için tıkla</a></h3>
         <hr>
         <h3>Sunucu hakkında</h3>
         <div>&nbsp;</div>
